The most beautiful part of the page begins

--- a/code/Myke Towers/myke.html
+++ b/code/Myke Towers/myke.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page--Music</title>
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="../fonts/font.css">
-    <link rel="icon" href="https://previews.123rf.com/images/butenkow/butenkow1612/butenkow161202015/67425651-logotipo-de-m%C3%BAsica-de-dise%C3%B1o-de-patr%C3%B3n-ilustraci%C3%B3n-de-vector-de-icono.jpg" type="image/png">
+    <title>Page-music</title>
+    <link rel="stylesheet" href="Myke.css">
+    <link rel="stylesheet" href="../../fonts/font.css">
+    <link rel="icon" href="https://previews.123rf.com/images/butenkow/butenkow1612/butenkow161202015/67425651-logotipo-de-m%C3%BAsica-de-dise%C3%B1o-de-patr%C3%B3n-ilustraci%C3%B3n-de-vector-de-icono.jpg" type="imagen/jpg">
 </head>
 <body>
     <header>
@@ -90,11 +90,11 @@
                     <input type="search" placeholder="search music">
                 </div>
                 <div class="User--page">
-                    <img src="../imagen/Logo.jpg" alt="No se puede ver la imagen" title="JoSantana0005">
+                    <img src="../../imagen/Logo.jpg" alt="No se puede ver la imagen" title="JoSantana0005">
                 </div>
             </nav>
             <div class="content__page">
-                <h1>Dei V</h1>
+                <h1>Myke Towers</h1>
                 <p>
                     David Gerardo Rivera Juarbe (Carolina, December 26, 1995), known musically as Dei V, is a Puerto Rican rapper and songwriter.
                     His recording debut was in 2021 with his extended play Ying Yang, however his international recognition would only be in 2023 with "Who is Dei V?"
@@ -116,7 +116,7 @@
                     <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/7.jpeg" alt="No se pued ver la imagen">
-                            <i class="bi bi-play-circle-fill" id="7"></i>
+                            <i class="bi bi-play-circle-fill PlaylistPlay" id="7"></i>
                         </div>
                         <h5>Verde Menta
                             <div class="subtitle">Rauw Alejandro</div>
@@ -125,7 +125,7 @@
                     <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/AfrodisiacoRauw.jpeg" alt="No se pued ver la imagen">
-                            <i class="bi bi-play-circle-fill" id="8"></i>
+                            <i class="bi bi-play-circle-fill PlaylistPlay" id="8"></i>
                         </div>
                         <h5>De Cora
                             <div class="subtitle">Rauw Alejandro</div>
@@ -134,7 +134,7 @@
                     <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/Bigsoto.jpg" alt="No se pued ver la imagen">
-                            <i class="bi bi-play-circle-fill" id="9"></i>
+                            <i class="bi bi-play-circle-fill PlaylistPlay" id="9"></i>
                         </div>
                         <h5>Soñador
                             <div class="subtitle">Big Soto</div>
@@ -143,7 +143,7 @@
                     <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/MoraParaiso.jpeg" alt="No se pued ver la imagen">
-                            <i class="bi bi-play-circle-fill" id="10"></i>
+                            <i class="bi bi-play-circle-fill PlaylistPlay" id="10"></i>
                         </div>
                         <h5>Domingo de Bote
                             <div class="subtitle">Mora</div>
@@ -152,7 +152,7 @@
                     <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/BadBunny100pre.jpeg" alt="No se pued ver la imagen">
-                            <i class="bi bi-play-circle-fill" id="11"></i>
+                            <i class="bi bi-play-circle-fill PlaylistPlay" id="11"></i>
                         </div>
                         <h5>RLDNT
                             <div class="subtitle">Bad Bunny</div>
@@ -161,7 +161,7 @@
                     <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/MoraEstrella.jpeg" alt="No se pued ver la imagen">
-                            <i class="bi bi-play-circle-fill" id="12"></i>
+                            <i class="bi bi-play-circle-fill PlaylistPlay" id="12"></i>
                         </div>
                         <h5>Fantasias
                             <div class="subtitle">Mora</div>
@@ -170,7 +170,7 @@
                     <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/BadBunnyYHLQMDLG.JPEG" alt="No se pued ver la imagen">
-                            <i class="bi bi-play-circle-fill" id="13"></i>
+                            <i class="bi bi-play-circle-fill PlaylistPlay" id="13"></i>
                         </div>
                         <h5>A tu merced
                             <div class="subtitle">Bad Bunny</div>
@@ -178,16 +178,16 @@
                     </li>
                     <li class="SongMusic">
                         <div class="Imagen__play">
-                            <img src="../imagen/BadBunnySalir.png" alt="No se pued ver la imagen">
-                            <i class="bi bi-play-circle-fill" id="14"></i>
+                            <img src="../../imagen/1.jpeg" alt="No se pued ver la imagen">
+                            <i class="bi bi-play-circle-fill PlaylistPlay" id="14"></i>
                         </div>
                         <h5>Bye me fui
                             <div class="subtitle">Bad Bunny</div>
                         </h5>
                     </li><li class="SongMusic">
                         <div class="Imagen__play">
-                            <img src="../imagen/OzunaOdisea.jpeg" alt="No se pued ver la imagen">
-                            <i class="bi bi-play-circle-fill" id="15"></i>
+                            <img src="../../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <i class="bi bi-play-circle-fill PlaylistPlay" id="15"></i>
                         </div>
                         <h5>Quiero Repetir
                             <div class="subtitle">Ozuna</div>
@@ -206,72 +206,72 @@
                 <div class="Artists">
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/Myketowers.jpeg" alt="No se pued ver la imagen" title="Myke towers">
+                            <a href="../Myke Towers/myke.html"><img src="../../imagen/Myketowers.jpeg" alt="No se pued ver la imagen" title="Myke towers"></a>
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/beckyG.jpeg" alt="No se pued ver la imagen" title="Becky G">
+                            <img src="../../imagen/beckyG.jpeg" alt="No se pued ver la imagen" title="Becky G">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/feid.jpeg" alt="No se pued ver la imagen" title="Feid">
+                            <img src="../../imagen/feid.jpeg" alt="No se pued ver la imagen" title="Feid">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/Invisibles.jpeg" alt="No se pued ver la imagen" title="Los amigos invisibles">
+                            <img src="../../imagen/Invisibles.jpeg" alt="No se pued ver la imagen" title="Los amigos invisibles">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/rawayanajpeg.jpeg" alt="No se pued ver la imagen" title="Rawayana">
+                            <img src="../../imagen/rawayanajpeg.jpeg" alt="No se pued ver la imagen" title="Rawayana">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/mora.jpeg" alt="No se pued ver la imagen" title="Mora">
+                            <img src="../../imagen/mora.jpeg" alt="No se pued ver la imagen" title="Mora">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/badbunny.jpeg" alt="No se pued ver la imagen" title="bad Bunny">
+                            <img src="../../imagen/badbunny.jpeg" alt="No se pued ver la imagen" title="bad Bunny">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/red.jpeg" alt="No se pued ver la imagen" title="Red hot chill peppers">
+                            <img src="../../imagen/red.jpeg" alt="No se pued ver la imagen" title="Red hot chill peppers">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/Jbalvin.jpeg" alt="No se pued ver la imagen" title="J balvin">
+                            <img src="../../imagen/Jbalvin.jpeg" alt="No se pued ver la imagen" title="J balvin">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/Ozuna.jpeg" alt="No se pued ver la imagen" title="Ozuna">
+                            <img src="../../imagen/Ozuna.jpeg" alt="No se pued ver la imagen" title="Ozuna">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/travis.jpeg" alt="No se pued ver la imagen" title="Travis Scott">
+                            <img src="../../imagen/travis.jpeg" alt="No se pued ver la imagen" title="Travis Scott">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/Drake.jpeg" alt="No se pued ver la imagen" title="Drake">
+                            <img src="../../imagen/Drake.jpeg" alt="No se pued ver la imagen" title="Drake">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/JustinQuiles.jpeg" alt="No se pued ver la imagen" title="Justin Quiles">
+                            <img src="../../imagen/JustinQuiles.jpeg" alt="No se pued ver la imagen" title="Justin Quiles">
                         </div>
                     </li>
                     <li class="SongItems">
                         <div class="Imagen__play">
-                            <img src="../imagen/jhaycortez.jpeg" alt="No se pued ver la imagen" title="Jhay Cortez">
+                            <img src="../../imagen/jhaycortez.jpeg" alt="No se pued ver la imagen" title="Jhay Cortez">
                         </div>
                     </li>
                 </div>
@@ -285,7 +285,7 @@
                 <div class="Wave1 "></div>
                 <div class="Wave1 "></div>
             </div>
-            <img src="../imagen/1.JPEG" alt="no se puede ver la iamgen" id="Poster">
+            <img src="../../imagen/1.jpeg" alt="no se puede ver la iamgen" id="Poster">
             <h5 id="title">
                 X2
                 <div class="subTitle">Dei V</div>
@@ -312,5 +312,5 @@
         </div>
     </header>
 </body>
-<script src="app.js"></script>
+<script src="myke.js"></script>
 </html>
