--- a/code/Myke Towers/myke.html
+++ b/code/Myke Towers/myke.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page-music</title>
-    <link rel="stylesheet" href="Myke.css">
+    <link rel="stylesheet" href="../estilo.css">
     <link rel="stylesheet" href="../../fonts/font.css">
     <link rel="icon" href="https://previews.123rf.com/images/butenkow/butenkow1612/butenkow161202015/67425651-logotipo-de-m%C3%BAsica-de-dise%C3%B1o-de-patr%C3%B3n-ilustraci%C3%B3n-de-vector-de-icono.jpg" type="imagen/jpg">
 </head>
