Agregando funcionalidades de repetir cancion y escuchar aletoriamente

--- a/code/Dei V/index.html
+++ b/code/Dei V/index.html
@@ -291,7 +291,7 @@
                 <div class="subTitle">Dei V</div>
             </h5>
             <div class="icon--play">
-                <i class="bi bi-music-note-beamed" id="Music-change"></i>
+                <i class="bi bi-music-note-beamed" id="Music-change">next</i>
                 <i class="bi bi-arrow-bar-left" id="Back-music"></i>
                 <i class="bi bi-play-fill" id="MasterPlay"></i>
                 <i class="bi bi-arrow-bar-right" id="Next-music"></i>
